Fixed issue where banner text would grow too large in full screen mode

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -44,5 +44,9 @@
 @media screen and (min-width: 640px) {
     .banner {
         font-size: 1rem;
+
+        &__text {
+            font-size: 1rem;
+        }
     }
 }
